# cmake_playground

./: CMakeLists.txt  a.c  b.c  c.c  main.c
